<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.presentation.SearchFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/hint_search" />

    <RadioGroup
        android:id="@+id/rg_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/search_view"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <RadioButton
            android:id="@+id/rb_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="@font/sofia_medium"
            android:text="@string/users"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sofia_medium"
            android:text="@string/repositories"
            android:textSize="16sp" />

    </RadioGroup>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_filters">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_filters"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_user" />

    </androidx.core.widget.NestedScrollView>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_filters"
        app:layout_constraintVertical_bias="0.0"
        app:shimmer_auto_start="true">

        <include layout="@layout/shimmer_user" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_filters"
        app:layout_constraintWidth_percent=".8"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="anim-search.json" />

</androidx.constraintlayout.widget.ConstraintLayout>